tests/derive/all_storages.stderr
error: Cannot borrow AllStorages exclusively as it is being borrowed by a component store already
 --> $DIR/all_storages.rs:4:8
  |
4 | fn run(_: AllStorages, _: &mut i32, _: &Entities, _: &mut Entities, _: Unique<&usize>, _: Unique<&mut usize>, _: Entities, _: EntitiesMut) {}
  |        ^^^^^^^^^^^^^^

error: Cannot borrow AllStorages due to this component borrow. You should borrow this component manually from the AllStorages borrow instead.
 --> $DIR/all_storages.rs:4:24
  |
4 | fn run(_: AllStorages, _: &mut i32, _: &Entities, _: &mut Entities, _: Unique<&usize>, _: Unique<&mut usize>, _: Entities, _: EntitiesMut) {}
  |                        ^^^^^^^^^^^

error: Cannot borrow AllStorages exclusively as it is being borrowed by a component store already
 --> $DIR/all_storages.rs:7:8
  |
7 | fn run(_: &mut AllStorages, _: &mut i32, _: &Entities, _: &mut Entities, _: Unique<&usize>, _: Unique<&mut usize>, _: Entities, _: EntitiesMut) {}
  |        ^^^^^^^^^^^^^^^^^^^

error: Cannot borrow AllStorages due to this component borrow. You should borrow this component manually from the AllStorages borrow instead.
 --> $DIR/all_storages.rs:7:29
  |
7 | fn run(_: &mut AllStorages, _: &mut i32, _: &Entities, _: &mut Entities, _: Unique<&usize>, _: Unique<&mut usize>, _: Entities, _: EntitiesMut) {}
  |                             ^^^^^^^^^^^
